--- a/efta.html
+++ b/efta.html
@@ -19,7 +19,7 @@ orbita: planeta ta znajduje się bardzo blisko swojej gwiazdy macierzystej. jest
 
 gwiazdowa macierz: TOI-4860 b krąży wokół gwiazdy TOI-4860. gwiazdy te są często określane jako „karły” (np. karły typu m), co oznacza, że są mniejsze I mniej masywne niż Nasze słońce.
 
-okres orbitalny: planety takie jak TOI-4860 b mają krótkie okresy orbitalne ze względu na bliskość do swoich gwiazd. Okres ten może wynosić zaledwie kilka dni, co jest typowe dla gorących jowiszów.
+okres orbitalny: planety takie jak TOI-4860 b mają krótkie okresy orbitalne ze względu na bliskość do swoich gwiazd. okres ten może wynosić zaledwie kilka dni, co jest typowe dla gorących jowiszów.
 
 odkrycie: odkrycie TOI-4860 b jest wynikiem obserwacji przez teleskop tess, który jest specjalnie zaprojektowany do poszukiwania egzoplanet poprzez monitorowanie jasności Gwiazd i wykrywanie spadków jasności spowodowanych tranzytem planet.
 
