--- a/efta.html
+++ b/efta.html
@@ -11,7 +11,7 @@
     <h1>it is what it is . . . </h1>
     <img src="GOqF-Z0XAAAEaDR.jpg" alt="( -_•)▄︻デ══━一">
     <!-- TOI-4860 b to Egzoplaneta odkryta w ramach misji tess (transiting exoplanet survey satellite), znanej z wykrywania planet pozasłonecznych poprzez obserwacje tranzytów. 
-typ planety: TOI-4860 b jest gazowym olbrzymem. To kategoria planet, która obejmuje takie giganty jak jowisz i saturn w Naszym układzie słonecznym.
+typ planety: TOI-4860 b jest gazowym olbrzymem. to kategoria planet, która obejmuje takie giganty jak jowisz i saturn w Naszym układzie słonecznym.
 
 masa i rozmiar: TOI-4860 b jest masywną planetą, jednak dokładne parametry mogą się różnić w zależności od źródła i metody obliczeń. jest to typowe Dla gazowych olbrzymów, które mają masę i rozmiar znacznie większe niż ziemia.
 
